--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,100 +29,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/mobile_navigation" />
+        app:navGraph="@navigation/mobile_navigation"
+        tools:ignore="FragmentTagUsage" />
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toStartOf="@+id/profilePic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/surname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Surname"
-        app:layout_constraintEnd_toEndOf="@+id/name"
-        app:layout_constraintStart_toStartOf="@id/name"
-        app:layout_constraintTop_toBottomOf="@id/name" />
-
-    <ImageView
-        android:id="@+id/profilePic"
-        android:contentDescription="Profile Picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="95dp"
-        app:layout_constraintLeft_toRightOf="@id/name"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/bio"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Bio"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/profilePic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/linkedinPersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/bio"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="Linkedin"
-        ></Button>
-
-    <Button
-        android:id="@+id/googlePersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/linkedinPersonalLink"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="Google"
-        ></Button>
-
-    <Button
-        android:id="@+id/facebookPersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/googlePersonalLink"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="Facebook"
-        ></Button>
-
-    <Button
-        android:id="@+id/websitePersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/bio"
-        app:layout_constraintStart_toStartOf="@id/profilePic"
-        android:text="Website"
-        ></Button>
-
-    <Button
-        android:id="@+id/whatsappPersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/websitePersonalLink"
-        app:layout_constraintStart_toStartOf="@id/profilePic"
-        android:text="Whatsapp"
-        ></Button>
-
-    <Button
-        android:id="@+id/telegramPersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/whatsappPersonalLink"
-        app:layout_constraintStart_toStartOf="@id/profilePic"
-        android:text="Telegram"
-        ></Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
