--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,123 +6,161 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <TextView
-        android:id="@+id/text_home"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:weightSum="3"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/name_placeholder"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toStartOf="@+id/profilePic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/surname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/surname_placeholder"
-        app:layout_constraintEnd_toEndOf="@+id/name"
-        app:layout_constraintStart_toStartOf="@id/name"
-        app:layout_constraintTop_toBottomOf="@id/name" />
-
-    <ImageView
-        android:id="@+id/profilePic"
-        android:contentDescription="@string/profile_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="95dp"
-        app:layout_constraintLeft_toRightOf="@id/name"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        >
 
-    <TextView
-        android:id="@+id/bio"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="@string/bio_placeholder"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/profilePic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            >
 
-    <Button
-        android:id="@+id/linkedinPersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        android:text="@string/linkedin_name"
-        android:textAlignment="center"
-        android:textColor="#2867b2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bio" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="2"
+                android:layout_weight="1">
 
-    <Button
-        android:id="@+id/googlePersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/linkedinPersonalLink"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text=""
-        android:textAlignment="center"   />
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginTop="50dp"
+                    android:text="@string/name_placeholder"
+                    />
+                <TextView
+                    android:id="@+id/surname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/surname_placeholder"
+                    />
 
-    <Button
-        android:id="@+id/facebookPersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        android:textColor="#4267B2"
-        app:layout_constraintTop_toBottomOf="@id/googlePersonalLink"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/facebook_name"
-        android:textAlignment="center"   />
+            </LinearLayout>
 
-    <Button
-        android:id="@+id/websitePersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        android:textColor="#ffc107"
-        app:layout_constraintTop_toBottomOf="@id/bio"
-        app:layout_constraintStart_toStartOf="@id/profilePic"
-        android:text="@string/personal_website_name"
-        android:textAlignment="center"   />
+            <ImageView
+                android:id="@+id/profilePic"
+                android:contentDescription="@string/profile_picture"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_weight="1"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_profile_pic_placeholder"
+                />
 
-    <Button
-        android:id="@+id/whatsappPersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        android:textColor="#4ac959"
-        app:layout_constraintTop_toBottomOf="@id/websitePersonalLink"
-        app:layout_constraintStart_toStartOf="@id/profilePic"
-        android:text="@string/whatsapp_name"
-        android:textAlignment="center"   />
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/telegramPersonalLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        android:textColor="#0088CC"
-        app:layout_constraintTop_toBottomOf="@id/whatsappPersonalLink"
-        app:layout_constraintStart_toStartOf="@id/profilePic"
-        android:text="@string/telegram_name"
-        android:textAlignment="center"   />
+        <TextView
+            android:id="@+id/bio"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="@string/bio_placeholder"
+            app:layout_constraintTop_toBottomOf="@id/profilePic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bio"
+            android:weightSum="3">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:weightSum="2">
+
+                <Button
+                    android:id="@+id/linkedinPersonalLink"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#00FFFFFF"
+                    android:text="@string/linkedin_name"
+                    android:textAlignment="center"
+                    android:textColor="#2867b2" />
+
+                <Button
+                    android:id="@+id/websitePersonalLink"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00FFFFFF"
+                    android:textColor="#ffc107"
+                    android:text="@string/personal_website_name"
+                    android:textAlignment="center"   />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:weightSum="2">
+
+                <Button
+                    android:id="@+id/googlePersonalLink"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00FFFFFF"
+                    android:text=""
+                    android:textAlignment="center"   />
+
+                <Button
+                    android:id="@+id/facebookPersonalLink"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00FFFFFF"
+                    android:textColor="#4267B2"
+                    android:text="@string/facebook_name"
+                    android:textAlignment="center"   />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:weightSum="2">
+
+                <Button
+                    android:id="@+id/whatsappPersonalLink"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00FFFFFF"
+                    android:textColor="#4ac959"
+                    android:text="@string/whatsapp_name"
+                    android:textAlignment="center"   />
+
+                <Button
+                    android:id="@+id/telegramPersonalLink"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00FFFFFF"
+                    android:textColor="#0088CC"
+                    android:text="@string/telegram_name"
+                    android:textAlignment="center"   />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
