--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,41 +8,47 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="3"
+        android:layout_height="match_parent"
+        android:weightSum="4"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        >
+        android:background="@color/home_background"
+        android:backgroundTint="@color/home_background_tint">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="2"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:orientation="vertical"
-                android:weightSum="2"
+                android:weightSum="3"
                 android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_marginTop="50dp"
+                    android:textSize="30dp"
                     android:text="@string/name_placeholder"
                     />
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+                <TextView
                     android:id="@+id/surname"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:textSize="30dp"
                     android:text="@string/surname_placeholder"
                     />
 
@@ -52,9 +58,8 @@
                 android:id="@+id/profilePic"
                 android:contentDescription="@string/profile_picture"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
                 android:src="@drawable/ic_profile_pic_placeholder"
                 />
 
@@ -65,6 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
+            android:textSize="40dp"
             android:text="@string/bio_placeholder"
             app:layout_constraintTop_toBottomOf="@id/profilePic"
             app:layout_constraintStart_toStartOf="parent"
