--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ProfilePlaceholder">
+        <item name="android:minHeight">24dp</item>
+        <item name="android:minWidth">24dp</item>
+    </style>
+
 </resources>
