--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="?attr/actionBarSize"
     tools:context=".ui.home.HomeFragment">
 
     <LinearLayout
@@ -29,26 +30,28 @@
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:orientation="vertical"
                 android:weightSum="3"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                tools:ignore="NestedWeights">
 
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="30dp"
-                    android:text="@string/name_placeholder"
-                    />
+                    android:textSize="30sp"
+                    android:text="@string/name_placeholder" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
+
                 <TextView
                     android:id="@+id/surname"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="30dp"
+                    android:textSize="30sp"
                     android:text="@string/surname_placeholder"
                     />
 
@@ -70,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:textSize="40dp"
+            android:textSize="40sp"
             android:text="@string/bio_placeholder"
             app:layout_constraintTop_toBottomOf="@id/profilePic"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +92,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:weightSum="2">
+                android:weightSum="2"
+                tools:ignore="NestedWeights">
 
                 <Button
                     android:id="@+id/linkedinPersonalLink"
