--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_contacts"
         android:icon="@drawable/ic_contacts"
         android:title="@string/title_contacts" />
 
@@ -12,7 +12,7 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_organization"
         android:icon="@drawable/ic_organization"
         android:title="@string/title_organization" />
 
