--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -86,11 +86,11 @@
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bio"
-            android:weightSum="3">
+            android:weightSum="4">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:weightSum="2"
                 tools:ignore="NestedWeights">
@@ -103,7 +103,8 @@
                     android:backgroundTint="#00FFFFFF"
                     android:text="@string/linkedin_name"
                     android:textAlignment="center"
-                    android:textColor="#2867b2" />
+                    android:textColor="#2867b2"
+                    tools:ignore="ButtonStyle" />
 
                 <Button
                     android:id="@+id/websitePersonalLink"
@@ -113,12 +114,13 @@
                     android:backgroundTint="#00FFFFFF"
                     android:textColor="#ffc107"
                     android:text="@string/personal_website_name"
-                    android:textAlignment="center"   />
+                    android:textAlignment="center"
+                    tools:ignore="ButtonStyle" />
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:weightSum="2">
 
@@ -129,7 +131,8 @@
                     android:layout_weight="1"
                     android:backgroundTint="#00FFFFFF"
                     android:text=""
-                    android:textAlignment="center"   />
+                    android:textAlignment="center"
+                    tools:ignore="ButtonStyle" />
 
                 <Button
                     android:id="@+id/facebookPersonalLink"
@@ -139,12 +142,13 @@
                     android:backgroundTint="#00FFFFFF"
                     android:textColor="#4267B2"
                     android:text="@string/facebook_name"
-                    android:textAlignment="center"   />
+                    android:textAlignment="center"
+                    tools:ignore="ButtonStyle" />
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:weightSum="2">
 
@@ -156,7 +160,8 @@
                     android:backgroundTint="#00FFFFFF"
                     android:textColor="#4ac959"
                     android:text="@string/whatsapp_name"
-                    android:textAlignment="center"   />
+                    android:textAlignment="center"
+                    tools:ignore="ButtonStyle" />
 
                 <Button
                     android:id="@+id/telegramPersonalLink"
@@ -166,9 +171,37 @@
                     android:backgroundTint="#00FFFFFF"
                     android:textColor="#0088CC"
                     android:text="@string/telegram_name"
-                    android:textAlignment="center"   />
+                    android:textAlignment="center"
+                    tools:ignore="ButtonStyle" />
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:weightSum="2">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/receive_contact_button"
+                    android:backgroundTint="#00FFFFFF"
+                    android:textAlignment="center"
+                    style="?buttonBarButtonStyle" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/send_contact_button"
+                    android:backgroundTint="#00FFFFFF"
+                    android:textAlignment="center"
+                    style="?buttonBarButtonStyle" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
