--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -183,6 +183,7 @@
                 android:weightSum="2">
 
                 <Button
+                    android:id="@+id/nfc_receive_contact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -192,6 +193,7 @@
                     style="?buttonBarButtonStyle" />
 
                 <Button
+                    android:id="@+id/nfc_send_my_contact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
