--- a/app/src/main/res/layout/edit_user_data_activity.xml
+++ b/app/src/main/res/layout/edit_user_data_activity.xml
@@ -48,7 +48,7 @@
             android:layout_gravity="center"
             android:src="@drawable/ic_profile_pic_placeholder" />
 
-        <TextView
+        <EditText
             android:id="@+id/linkedin_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
             android:background="@drawable/border"
             android:layout_marginBottom="15dp" />
 
-        <TextView
+        <EditText
             android:id="@+id/google_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -68,7 +68,7 @@
             android:background="@drawable/border"
             android:layout_marginBottom="15dp" />
 
-        <TextView
+        <EditText
             android:id="@+id/website_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
             android:background="@drawable/border"
             android:layout_marginBottom="15dp" />
 
-        <TextView
+        <EditText
             android:id="@+id/whatsapp_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
             android:background="@drawable/border"
             android:layout_marginBottom="15dp" />
 
-        <TextView
+        <EditText
             android:id="@+id/telegram_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -98,7 +98,7 @@
             android:background="@drawable/border"
             android:layout_marginBottom="15dp" />
 
-        <TextView
+        <EditText
             android:id="@+id/facebook_link_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
