--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_organization"
-        android:icon="@drawable/ic_organization"
-        android:title="@string/title_organization" />
+        android:icon="@drawable/ic_exchange_foreground"
+        android:title="@string/exchange" />
 
 </menu>
