--- a/app/src/main/res/menu/contacts_options_menu.xml
+++ b/app/src/main/res/menu/contacts_options_menu.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <item
         android:id="@+id/contacts_settings"
         android:title="@string/settings_buttons_title" />
+    <item
+        android:id="@+id/add_contact"
+        android:title="@string/add_contact_settings" />
 
 </menu>
