--- a/app/src/main/res/menu/home_options_menu.xml
+++ b/app/src/main/res/menu/home_options_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/home_settings"
-        android:title="@string/settings_buttons_title" />
-    <item
         android:id="@+id/home_profile"
         android:title="@string/edit_profile_button_title" />
+    <item
+        android:id="@+id/set_work_position"
+        android:title="@string/set_work_button_title" />
 </menu>
