Implemented time intervals

--- a/app/src/main/res/menu/home_options_menu.xml
+++ b/app/src/main/res/menu/home_options_menu.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/set_work_position"
         android:title="@string/set_work_button_title" />
+    <item
+        android:id="@+id/set_time_intervals"
+        android:title="@string/set_time_intervals" />
 </menu>
