Fixed some stuff
Added more bug to fix later

--- a/app/src/main/res/menu/home_options_menu.xml
+++ b/app/src/main/res/menu/home_options_menu.xml
@@ -9,4 +9,7 @@
     <item
         android:id="@+id/set_time_intervals"
         android:title="@string/set_time_intervals" />
+    <item
+        android:id="@+id/home_settings"
+        android:title="@string/settings_buttons_title" />
 </menu>
