Added delete contact

--- a/app/src/main/res/layout/edit_user_data_activity.xml
+++ b/app/src/main/res/layout/edit_user_data_activity.xml
@@ -52,7 +52,7 @@
             android:id="@+id/linkedin_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/linkedin_name"
+            android:hint="@string/linkedin_name"
             android:textSize="35sp"
             android:paddingHorizontal="10dp"
             android:background="@drawable/border"
@@ -62,7 +62,7 @@
             android:id="@+id/google_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Google"
+            android:hint="Google"
             android:textSize="35sp"
             android:paddingHorizontal="10dp"
             android:background="@drawable/border"
@@ -72,7 +72,7 @@
             android:id="@+id/website_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/personal_website_name"
+            android:hint="@string/personal_website_name"
             android:textSize="35sp"
             android:paddingHorizontal="10dp"
             android:background="@drawable/border"
@@ -82,7 +82,7 @@
             android:id="@+id/whatsapp_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/whatsapp_name"
+            android:hint="@string/whatsapp_name"
             android:textSize="35sp"
             android:paddingHorizontal="10dp"
             android:background="@drawable/border"
@@ -92,7 +92,7 @@
             android:id="@+id/telegram_edit_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/telegram_name"
+            android:hint="@string/telegram_name"
             android:textSize="35sp"
             android:paddingHorizontal="10dp"
             android:background="@drawable/border"
@@ -102,7 +102,7 @@
             android:id="@+id/facebook_link_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/facebook_name"
+            android:hint="@string/facebook_name"
             android:textSize="35sp"
             android:paddingHorizontal="10dp"
             android:background="@drawable/border"
