--- a/app/src/main/res/layout/home_settings_ui.xml
+++ b/app/src/main/res/layout/home_settings_ui.xml
@@ -9,6 +9,7 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/dndmaw_button"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/red"
